--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "fastify": "^2.12.0",
     "fluent-schema": "^0.10.0",
+    "redis": "^3.0.2",
     "tile38": "^0.7.0"
   },
   "devDependencies": {
