--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "fastify": "^2.12.0",
     "fluent-schema": "^0.10.0",
-    "redis": "^3.0.2",
-    "axios": "^0.19.2"
+    "redis": "^3.0.2"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "moxios": "^0.4.0",
+    "sinon": "^9.0.0"
   }
 }
