--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-constants": "~8.0.0",
     "expo-location": "^8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-task-manager": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
