--- a/server/.gitignore
+++ b/server/.gitignore
@@ -109,4 +109,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-yarn.lock
+# Tile38 server
+data/appendonly.aof
+data/config
+data/queue.db
