--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
+    "react-native-error-boundary": "^1.1.0",
     "react-native-web": "~0.11.7",
     "rxjs": "^6.5.4"
   },
