Removed dockers not used in production

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -15,26 +15,25 @@ services:
   tile38:
     image: tile38/tile38
     container_name: tile38
-    ports:
-      - 9851:9851
+#    ports:
+#      - 9851:9851
     restart: unless-stopped
 
-  # These two are not necessary in production
-  tile38-viewer:
-    image: leighghunt/tile38-viewer
-    container_name: tile38-viewer
-    env_file: ./docker-environment-list
-    depends_on:
-      - tile38
-    ports:
-      - 80:80
-      - 443:443
-    restart: unless-stopped
-  tile38-worker:
-    image: leighghunt/tile38-worker
-    container_name: tile38-worker
-    env_file: ./docker-environment-list
-    depends_on:
-      - tile38
-      - tile38-viewer
-    restart: unless-stopped
+#  tile38-viewer:
+#    image: leighghunt/tile38-viewer
+#    container_name: tile38-viewer
+#    env_file: ./docker-environment-list
+#    depends_on:
+#      - tile38
+#    ports:
+#      - 80:80
+#      - 443:443
+#    restart: unless-stopped
+#  tile38-worker:
+#    image: leighghunt/tile38-worker
+#    container_name: tile38-worker
+#    env_file: ./docker-environment-list
+#    depends_on:
+#      - tile38
+#      - tile38-viewer
+#    restart: unless-stopped
