--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "lint": "tslint --project .",
     "start": "node index.ts",
     "test": "jest",
     "tsc": "tsc",
