--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "devDependencies": {
     "@types/geojson": "^7946.0.7",
     "@types/jest": "^25.1.4",
+    "@types/moxios": "^0.4.9",
     "@types/node": "^13.9.2",
     "@types/node-fetch": "^2.5.5",
     "@types/redis": "^2.8.16",
+    "@types/sinon": "^7.5.2",
     "jest": "^25.1.0",
     "moxios": "^0.4.0",
     "sinon": "^9.0.0",
