--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "lint": "tslint --project .",
-    "start": "node index.ts",
+    "start": "node index.js",
     "test": "jest",
     "tsc": "tsc",
     "watch": "tsc --watch"
