--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/redis": "^2.8.16",
     "@types/sinon": "^7.5.2",
     "jest": "^25.1.0",
+    "jest-extended": "^0.11.5",
     "moxios": "^0.4.0",
     "sinon": "^9.0.0",
     "ts-jest": "^25.2.1",
